changed from Service IVeinMiner to Veinminer class in Common Project